# DeNovoPath

./: .gitignore  DATA.md  ENVIRONMENT.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: default.yaml
scripts/: __init__.py  compare_annovar_denovopath.py  compare_snpeff_denovopath.py  export_ranked.py  normalize_biallelic_snp_ref.py  score_vcf.py  score_vcf_parallel.py  train_ml_model.py
src/denovopath/: __init__.py  cli.py  scorer.py
tests/: test_denovopath.py
